Updated ReadMe and added requirments.txt

--- a/Hand_Gesture_Classification.ipynb
+++ b/Hand_Gesture_Classification.ipynb
@@ -297,6 +297,7 @@
     "            64 : second hidden layer\n",
     "            10 : number of classes\n",
     "        - dropout: dropout rate for hidden neurons; default is 0 meaning no dropout\n",
+    "        - bn: boolean; determines whether we use batch normalization in hidden layers or not\n",
     "        - activation: activation function for inner layer as function name like tf.nn.relu\n",
     "        - optimizer: optimizer for training the network as function name like tf.train.GradientDescentOptimizer\n",
     "        - lr: learning rate of the optimizer\n",
